# Predicting_Failure_NASA_Turbofan_Jet_Engine

./: .gitignore  README.md  exploratory_analysis_engine_data.ipynb  pyproject.toml  setup.py
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
.virtual_documents/: exploratory_analysis_engine_data.ipynb
.virtual_documents/notebooks/: create_training_data.ipynb  exploring_test_Data.ipynb
data/: unit_1.h5
models/: RUL_regressor_unit1_epoch_0.pth  RUL_regressor_unit1_epoch_1.pth
notebooks/: create_training_data.ipynb  exploring_test_Data.ipynb  smoothing_kalman.ipynb  train_HMM.ipynb
notebooks/.ipynb_checkpoints/: create_training_data-checkpoint.ipynb  exploring_test_Data-checkpoint.ipynb  smoothing_kalman-checkpoint.ipynb
scalars/: scalar_FD001.pkl
scripts/: create_data.py  evaluate_recurrent.py  train_recurrent.py
src/predicting_failure/: core_train_models.py  data_creation.py  helpers.py  models.py
tests/: test_eval_data.py  test_load_data.py
